[gd_scene load_steps=48 format=3 uid="uid://ewkm2hndunic"]

[ext_resource type="PackedScene" uid="uid://833wntm0gtkv" path="res://Scenes/enemy_body_2d.tscn" id="1_hawkt"]
[ext_resource type="Script" uid="uid://5uk6numond0o" path="res://Scripts/enemy_goose_movement.gd" id="2_b2jf3"]
[ext_resource type="Shader" uid="uid://ccat2ubc1xwd7" path="res://Shaders/Damage_Flicker.gdshader" id="2_i4fyg"]
[ext_resource type="Texture2D" uid="uid://cbshpiski178g" path="res://Art/TutorialResources/Goose_Sheet.png" id="4_o7cy4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jy710"]
resource_local_to_scene = true
shader = ExtResource("2_i4fyg")
shader_parameter/blink_speed = 30.0
shader_parameter/blinking = false
shader_parameter/flash_opacity = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o7cy4"]
radius = 38.0
height = 110.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bqxa1"]
radius = 15.0
height = 140.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mmn7e"]
radius = 53.86
height = 218.01

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tf67r"]
radius = 15.0
height = 140.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nuu82"]
radius = 65.14
height = 311.45

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5jg7x"]
size = Vector2(3500, 900)

[sub_resource type="Animation" id="Animation_mmn7e"]
resource_name = "Attack"
length = 0.250004
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0, Vector3(27, 0, 72)],
"method": &"move_collider"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1, Vector3(-94, 17, 90)],
"method": &"move_collider"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [2, Vector3(0, 0, 90)],
"method": &"move_collider"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [3, Vector3(27, 0, 72)],
"method": &"move_collider"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [4, Vector3(-94, 17, 90)],
"method": &"move_collider"
}]
}

[sub_resource type="Animation" id="Animation_tf67r"]
resource_name = "Death"
length = 0.500004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(4, 0), Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0, Vector3(-92, 28, 0)],
"method": &"move_collider"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1, Vector3(-75, -56, 0)],
"method": &"move_collider"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [2, Vector3(-78, 9, 0)],
"method": &"move_collider"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [3, Vector3(-92, 28, 0)],
"method": &"move_collider"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [4, Vector3(-75, -56, 0)],
"method": &"move_collider"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"set_injured_blinking"
}]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_hitbox_enabled"
}]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("HealthComponent")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_despawn_countdown"
}]
}
tracks/9/type = "method"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("HealthComponent")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"drop_sparkles"
}]
}
tracks/10/type = "method"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_attack_enabled"
}]
}

[sub_resource type="Animation" id="Animation_2s8tm"]
resource_name = "Down_To_Up"
length = 0.125004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4)]
}

[sub_resource type="Animation" id="Animation_nuu82"]
resource_name = "Fly"
length = 0.500004
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(0, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0, Vector3(27, 0, 72)],
"method": &"move_collider"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1, Vector3(-94, 17, 90)],
"method": &"move_collider"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [2, Vector3(0, 0, 90)],
"method": &"move_collider"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [3, Vector3(27, 0, 72)],
"method": &"move_collider"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [4, Vector3(-94, 17, 90)],
"method": &"move_collider"
}]
}

[sub_resource type="Animation" id="Animation_bqxa1"]
resource_name = "Injured"
length = 0.291671
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.208338),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(0, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0416667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0, Vector3(-92, 28, 0)],
"method": &"move_collider"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0416667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1, Vector3(-75, -56, 0)],
"method": &"move_collider"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0416667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [2, Vector3(-78, 9, 0)],
"method": &"move_collider"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0416667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [3, Vector3(-92, 28, 0)],
"method": &"move_collider"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.0416667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [4, Vector3(-75, -56, 0)],
"method": &"move_collider"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.291667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"set_injured_anim_finished"
}]
}

[sub_resource type="Animation" id="Animation_o7cy4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_bkxoy"]
resource_name = "Telegraph"
length = 0.333338
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(0, 5), Vector2i(1, 5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0833333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0, Vector3(-92, 28, 0)],
"method": &"move_collider"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0833333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1, Vector3(-75, -56, 0)],
"method": &"move_collider"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0833333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [2, Vector3(-78, 9, 0)],
"method": &"move_collider"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0833333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [3, Vector3(-92, 28, 0)],
"method": &"move_collider"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.0833333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [4, Vector3(-75, -56, 0)],
"method": &"move_collider"
}]
}

[sub_resource type="Animation" id="Animation_tsti2"]
resource_name = "Up_To_Down"
length = 0.416671
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.166667, 0.250004, 0.333338),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 4), Vector2i(3, 4), Vector2i(2, 4), Vector2i(1, 4), Vector2i(0, 3), Vector2i(1, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tf67r"]
_data = {
&"Attack": SubResource("Animation_mmn7e"),
&"Death": SubResource("Animation_tf67r"),
&"Down_To_Up": SubResource("Animation_2s8tm"),
&"Fly": SubResource("Animation_nuu82"),
&"Injured": SubResource("Animation_bqxa1"),
&"RESET": SubResource("Animation_o7cy4"),
&"Telegraph": SubResource("Animation_bkxoy"),
&"Up_To_Down": SubResource("Animation_tsti2")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mmn7e"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tf67r"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o7cy4"]
animation = &"Fly"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nuu82"]
animation = &"Injured"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bqxa1"]
animation = &"Telegraph"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2s8tm"]
animation = &"Up_To_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bkxoy"]
animation = &"Up_To_Down"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mmn7e"]
advance_mode = 2
advance_expression = "running
"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bkxoy"]
advance_mode = 2
advance_expression = "can_attack && attacking && !dead && !injured && player_within_attack_range"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tsti2"]
advance_mode = 2
advance_expression = "maneuver_finished && !dead && !injured && !attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lgocb"]
advance_mode = 2
advance_expression = "dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wvwt8"]
advance_mode = 2
advance_expression = "dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_upkmj"]
advance_mode = 2
advance_expression = "dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1s1xj"]
advance_mode = 2
advance_expression = "injured && !injured_anim_finished"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y2qr5"]
advance_mode = 2
advance_expression = "dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ufdpf"]
advance_mode = 2
advance_expression = "injured && !injured_anim_finished"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6s3yu"]
advance_mode = 2
advance_expression = "injured && !injured_anim_finished"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uuvtc"]
switch_mode = 2
advance_mode = 2
advance_expression = "!injured && injured_anim_finished && !dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e886j"]
switch_mode = 2
advance_mode = 2
advance_expression = "!dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jv7yp"]
advance_mode = 2
advance_expression = "dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pp6n4"]
switch_mode = 2
advance_mode = 2
advance_expression = "!dead && !injured"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r67gp"]
advance_mode = 2
advance_expression = "dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j1rvk"]
advance_mode = 2
advance_expression = "injured && !injured_anim_finished"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sf26b"]
advance_mode = 2
advance_expression = "injured && !injured_anim_finished"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tu5v2"]
switch_mode = 2
advance_mode = 2
advance_expression = "!dead && !injured"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_f5v5x"]
states/Attack/node = SubResource("AnimationNodeAnimation_mmn7e")
states/Attack/position = Vector2(808, 228)
states/Death/node = SubResource("AnimationNodeAnimation_tf67r")
states/Death/position = Vector2(555, 177)
states/Fly/node = SubResource("AnimationNodeAnimation_o7cy4")
states/Fly/position = Vector2(267, 248)
states/Injured/node = SubResource("AnimationNodeAnimation_nuu82")
states/Injured/position = Vector2(515, 379)
states/Telegraph/node = SubResource("AnimationNodeAnimation_bqxa1")
states/Telegraph/position = Vector2(419, 48)
states/Up_To_Down/node = SubResource("AnimationNodeAnimation_bkxoy")
states/Up_To_Down/position = Vector2(339, 398)
"states/Up_To_Down 2/node" = SubResource("AnimationNodeAnimation_2s8tm")
"states/Up_To_Down 2/position" = Vector2(702, 77)
transitions = ["Start", "Fly", SubResource("AnimationNodeStateMachineTransition_mmn7e"), "Fly", "Telegraph", SubResource("AnimationNodeStateMachineTransition_bkxoy"), "Attack", "Fly", SubResource("AnimationNodeStateMachineTransition_tsti2"), "Telegraph", "Death", SubResource("AnimationNodeStateMachineTransition_lgocb"), "Fly", "Death", SubResource("AnimationNodeStateMachineTransition_wvwt8"), "Attack", "Death", SubResource("AnimationNodeStateMachineTransition_upkmj"), "Fly", "Injured", SubResource("AnimationNodeStateMachineTransition_1s1xj"), "Injured", "Death", SubResource("AnimationNodeStateMachineTransition_y2qr5"), "Attack", "Injured", SubResource("AnimationNodeStateMachineTransition_ufdpf"), "Telegraph", "Injured", SubResource("AnimationNodeStateMachineTransition_6s3yu"), "Injured", "Up_To_Down", SubResource("AnimationNodeStateMachineTransition_uuvtc"), "Up_To_Down", "Fly", SubResource("AnimationNodeStateMachineTransition_e886j"), "Up_To_Down", "Death", SubResource("AnimationNodeStateMachineTransition_jv7yp"), "Telegraph", "Up_To_Down 2", SubResource("AnimationNodeStateMachineTransition_pp6n4"), "Up_To_Down 2", "Death", SubResource("AnimationNodeStateMachineTransition_r67gp"), "Up_To_Down 2", "Injured", SubResource("AnimationNodeStateMachineTransition_j1rvk"), "Up_To_Down", "Injured", SubResource("AnimationNodeStateMachineTransition_sf26b"), "Up_To_Down 2", "Attack", SubResource("AnimationNodeStateMachineTransition_tu5v2")]
graph_offset = Vector2(0, 117.528)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0q67h"]
size = Vector2(1400, 900)

[node name="Enemy_Goose" instance=ExtResource("1_hawkt")]
script = ExtResource("2_b2jf3")
SPEED = 600.0
ACCEPTABLE_PLAYER_DISTANCE = 0.5
aerial_enemy = true

[node name="Sprite2D" parent="." index="0"]
material = SubResource("ShaderMaterial_jy710")
texture = ExtResource("4_o7cy4")
hframes = 5
vframes = 6

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(27, 0)
rotation = 1.25664
shape = SubResource("CapsuleShape2D_o7cy4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="2"]
position = Vector2(-94, 17)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bqxa1")

[node name="HealthComponent" parent="." index="3"]
invincible_time = 2.0
SPARKLE_NUMBER = 3

[node name="CollisionShape2D" parent="HitboxComponent" index="0"]
position = Vector2(57, -48)
rotation = 0.785398
shape = SubResource("CapsuleShape2D_mmn7e")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitboxComponent" index="1"]
position = Vector2(-94, 17)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tf67r")
debug_color = Color(0.270588, 0.631373, 0, 0.419608)

[node name="AttackComponent" parent="." index="5"]
collision_mask = 4
knockback_force = 600.0

[node name="CollisionShape2D" parent="AttackComponent" index="0"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nuu82")

[node name="Child_Flipper" parent="." index="6" node_paths=PackedStringArray("flippables")]
flippables = [NodePath("../AttackComponent/CollisionShape2D"), NodePath("../Sprite2D"), NodePath("../Attack_Range/CollisionShape2D"), NodePath("../Wall_Detector_L"), NodePath("../Wall_Detector_R"), NodePath("../HitboxComponent/CollisionShape2D2"), NodePath("../CollisionShape2D2")]

[node name="PlayerDetector" parent="." index="7"]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="PlayerDetector" index="0"]
position = Vector2(-0.000181, 410)
rotation = 0.0
shape = SubResource("RectangleShape2D_5jg7x")

[node name="AnimationPlayer" parent="." index="9"]
libraries = {
&"": SubResource("AnimationLibrary_tf67r")
}

[node name="AnimationTree" parent="." index="10"]
tree_root = SubResource("AnimationNodeStateMachine_f5v5x")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="Attack_Range" type="Area2D" parent="." index="11"]
visible = false
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Range" index="0"]
position = Vector2(0, 409.5)
shape = SubResource("RectangleShape2D_0q67h")

[node name="Swoop_Cooldown_Timer" type="Timer" parent="." index="12"]
wait_time = 2.0
one_shot = true

[node name="Wall_Detector_L" type="RayCast2D" parent="." index="13"]
target_position = Vector2(-170, 50)

[node name="Wall_Detector_R" type="RayCast2D" parent="." index="14"]
target_position = Vector2(-170, -50)

[connection signal="body_entered" from="Attack_Range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="Attack_Range" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="Swoop_Cooldown_Timer" to="." method="_on_swoop_cooldown_timer_timeout"]

[editable path="HitboxComponent"]
[editable path="AttackComponent"]
[editable path="PlayerDetector"]
